--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Madema Carlota | Barbearia</title>
+	<title>Madame Carlota | Barbearia</title>
 
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/style.css">
@@ -30,13 +30,13 @@
 
 	<main>
 		<section class="principal">
-			<h2 class="titulo-principal">Sobre a Barbearia Madema Carlota</h2>
+			<h2 class="titulo-principal">Sobre a Barbearia Madame Carlota</h2>
 
 			<img class="utensilios" src="./img/utensilios.jpg" alt="Utensilios de um barbeiro.">
 
-			<p>Localizada no coração da cidade a <strong>Barbearia Madema Carlota</strong> traz para o mercado o que há
+			<p>Localizada no coração da cidade a <strong>Barbearia Madame Carlota</strong> traz para o mercado o que há
 				de melhor
-				para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos
+				para o seu cabelo e barba. Fundada em 2019, a Barbearia Madame Carlota já é destaque na cidade e conquista novos
 				clientes a cada dia.</p>
 
 			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos
@@ -82,7 +82,7 @@
 
 	<footer>
 		<img src="./img/logo-branco.png">
-		<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+		<p class="copyright">&copy; Copyright Barbearia Madame Carlota - 2023</p>
 	</footer>
 </body>
 
