--- a/contato.html
+++ b/contato.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Contato - Barbearia Alura</title>
+		<title>Contato - Barbearia Madame Carlota</title>
 
 		<link rel="stylesheet" href="./css/reset.css">
 		<link rel="stylesheet" href="./css/style.css">
@@ -10,7 +10,7 @@
 	<body>
 		<header>
 			<div class="caixa">
-				<h1><img src="./img/logo.png" alt="Logo da Barbearia Alura"></h1>
+				<h1><img src="./img/logo.png" alt="Logo da Barbearia Madame Carlota"></h1>
 
 				<nav>
 					<ul>
@@ -80,8 +80,8 @@
 		</main>
 
 		<footer>
-			<img src="./img/logo-branco.png" alt="Logo da Barbearia Alura">
-			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+			<img src="./img/logo-branco.png" alt="Logo da Barbearia Madame Carlota">
+			<p class="copyright">&copy; Copyright Barbearia Madame Carlota - 2023</p>
 		</footer>
 	</body>
 </html>
